--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dolly Restaurant</title>
+</head>
+<body>
+
 <h2>Dolly Restaurant</h2>
 
 <p>Login to your account</p>
 
 <input type="text" placeholder="Email or Phone"><br><br>
-
 <input type="password" placeholder="Password"><br><br>
 
 <button>Login</button>
 <button>Register</button>
+
+</body>
+</html>
