--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <input type="text" placeholder="Email or Phone">
     <input type="password" placeholder="Password">
 
-    <button>Login</button>
-    <button>Register</button>
+    <button onclick="alert('Login clicked')">Login</button>
+    <button onclick="alert('Register clicked')">Register</button>
   </div>
 
 </body>
