--- a/index.html
+++ b/index.html
@@ -1,134 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Dolly Restaurant</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f5f5f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-
-    .box {
-      background: white;
-      padding: 30px;
-      width: 100%;
-      max-width: 420px;
-      text-align: center;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      padding: 20px;
     }
 
     h2 {
-      font-size: 34px;
-      margin-bottom: 10px;
+      text-align: center;
     }
 
-    p {
-      font-size: 20px;
-      margin-bottom: 20px;
+    .box {
+      max-width: 400px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
-    input {
+    input, button {
       width: 100%;
-      padding: 15px;
-      font-size: 20px;
-      margin-bottom: 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      padding: 10px;
+      margin: 8px 0;
     }
 
     button {
-      width: 100%;
-      padding: 15px;
-      font-size: 22px;
-      margin-top: 10px;
+      background: #111;
+      color: white;
       border: none;
-      border-radius: 6px;
       cursor: pointer;
     }
 
-    .login-btn {
-      background: #1a73e8;
-      color: white;
-    }
-
-    .register-btn {
-      background: #555;
-      color: white;
-    }
-
-    .link {
-      margin-top: 20px;
-      font-size: 18px;
-      color: #1a73e8;
-      cursor: pointer;
+    button:hover {
+      background: #333;
     }
 
     .hidden {
       display: none;
     }
+
+    .menu-item {
+      border-bottom: 1px solid #ddd;
+      padding: 10px 0;
+    }
   </style>
 </head>
-
 <body>
 
-  <div class="box">
+<!-- REGISTER -->
+<div class="box" id="registerBox">
+  <h2>Register</h2>
+  <input type="email" id="regEmail" placeholder="Email">
+  <input type="tel" id="regPhone" placeholder="Phone Number">
+  <input type="password" id="regPassword" placeholder="Password">
+  <input type="password" id="regConfirm" placeholder="Confirm Password">
+  <button onclick="register()">Register</button>
+</div>
 
-    <!-- LOGIN -->
-    <div id="loginBox">
-      <h2>Dolly Restaurant</h2>
-      <p>Login to your account</p>
+<!-- REGISTER SUCCESS -->
+<div class="box hidden" id="successBox">
+  <h2>✅ Registration Complete</h2>
+  <p style="text-align:center;">You can now log in.</p>
+  <button onclick="showLogin()">Go to Login</button>
+</div>
 
-      <input type="text" placeholder="Email or Phone">
-      <input type="password" placeholder="Password">
+<!-- LOGIN -->
+<div class="box hidden" id="loginBox">
+  <h2>Login</h2>
+  <input type="email" id="loginEmail" placeholder="Email">
+  <input type="password" id="loginPassword" placeholder="Password">
+  <button onclick="login()">Login</button>
+</div>
 
-      <button class="login-btn" onclick="login()">Login</button>
+<!-- MENU -->
+<div class="box hidden" id="menuBox">
+  <h2>Dolly Restaurant Menu</h2>
 
-      <div class="link" onclick="showRegister()">Register instead</div>
-    </div>
-
-    <!-- REGISTER -->
-    <div id="registerBox" class="hidden">
-      <h2>Create Account</h2>
-
-      <input type="email" placeholder="Email">
-      <input type="password" placeholder="Password">
-      <input type="password" placeholder="Confirm Password">
-
-      <button class="register-btn" onclick="register()">Register</button>
-
-      <div class="link" onclick="showLogin()">Back to Login</div>
-    </div>
-
+  <div class="menu-item">
+    <strong>Chicken</strong><br>
+    ₦4,000 / ₦6,000
+    <button onclick="order('Chicken')">Order</button>
   </div>
 
-  <script>
-    function showRegister() {
+  <div class="menu-item">
+    <strong>Burger</strong><br>
+    ₦10,000
+    <button onclick="order('Burger')">Order</button>
+  </div>
+
+  <div class="menu-item">
+    <strong>Rice</strong><br>
+    ₦3,000
+    <button onclick="order('Rice')">Order</button>
+  </div>
+
+</div>
+
+<script>
+  let savedEmail = "";
+  let savedPassword = "";
+
+  function register() {
+    let email = document.getElementById("regEmail").value;
+    let phone = document.getElementById("regPhone").value;
+    let password = document.getElementById("regPassword").value;
+    let confirm = document.getElementById("regConfirm").value;
+
+    if (email === "" || phone === "" || password === "" || confirm === "") {
+      alert("Please fill all details.");
+      return;
+    }
+
+    if (password !== confirm) {
+      alert("Passwords do not match.");
+      return;
+    }
+
+    savedEmail = email;
+    savedPassword = password;
+
+    document.getElementById("registerBox").classList.add("hidden");
+    document.getElementById("successBox").classList.remove("hidden");
+  }
+
+  function showLogin() {
+    document.getElementById("successBox").classList.add("hidden");
+    document.getElementById("loginBox").classList.remove("hidden");
+  }
+
+  function login() {
+    let email = document.getElementById("loginEmail").value;
+    let password = document.getElementById("loginPassword").value;
+
+    if (email === savedEmail && password === savedPassword) {
       document.getElementById("loginBox").classList.add("hidden");
-      document.getElementById("registerBox").classList.remove("hidden");
+      document.getElementById("menuBox").classList.remove("hidden");
+    } else {
+      alert("Wrong login details.");
     }
+  }
 
-    function showLogin() {
-      document.getElementById("registerBox").classList.add("hidden");
-      document.getElementById("loginBox").classList.remove("hidden");
-    }
-
-    function login() {
-      alert("Login clicked");
-    }
-
-    function register() {
-      alert("Register clicked");
-    }
-  </script>
+  function order(item) {
+    alert(item + " ordered successfully!");
+  }
+</script>
 
 </body>
 </html>
